--- a/package.json
+++ b/package.json
@@ -8,6 +8,17 @@
     "typescript": false,
     "css": "sass"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,json}": [
+      "eslint --fix",
+      "git add"
+    ]
+  },
   "scripts": {
     "build:weapp": "taro build --type weapp",
     "build:swan": "taro build --type swan",
@@ -41,29 +52,31 @@
     "@tarojs/taro-swan": "2.0.5",
     "@tarojs/taro-tt": "2.0.5",
     "@tarojs/taro-weapp": "2.0.5",
+    "lint-staged": "^10.0.8",
     "nerv-devtools": "^1.5.5",
     "nervjs": "^1.5.5",
     "taro-ui": "^2.3.0"
   },
   "devDependencies": {
-    "@types/react": "^16.4.6",
-    "@types/webpack-env": "^1.13.6",
     "@tarojs/mini-runner": "2.0.5",
     "@tarojs/webpack-runner": "2.0.5",
+    "@types/react": "^16.4.6",
+    "@types/webpack-env": "^1.13.6",
+    "babel-eslint": "^8.2.3",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-jsx-stylesheet": "^0.6.5",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
-    "babel-eslint": "^8.2.3",
     "eslint": "^5.16.0",
     "eslint-config-taro": "2.0.5",
+    "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-react": "^7.8.2",
     "eslint-plugin-react-hooks": "^1.6.1",
-    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-taro": "2.0.5",
+    "husky": "^4.2.3",
     "stylelint": "9.3.0",
     "stylelint-config-taro-rn": "2.0.5",
-    "stylelint-taro-rn": "2.0.5",
-    "eslint-plugin-taro": "2.0.5"
+    "stylelint-taro-rn": "2.0.5"
   }
 }
