feat: [chong] #4 add async and await

--- a/project.config.json
+++ b/project.config.json
@@ -2,7 +2,7 @@
 	"miniprogramRoot": "dist/",
 	"projectname": "aid_tracker_fe",
 	"description": "Aid Tracker",
-	"appid": "wx44a730a5c0a16438",
+	"appid": "wx2794378e18ee1fb5",
 	"setting": {
 		"urlCheck": false,
 		"es6": false,
