--- a/project.config.json
+++ b/project.config.json
@@ -52,6 +52,13 @@
 					"id": -1,
 					"name": "pages/detail/donator/detail-receipt/index",
 					"pathName": "pages/detail/donator/detail-receipt/index",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "pages/detail/donator/detail-doing/index",
+					"pathName": "pages/detail/donator/detail-doing/index",
 					"scene": null
 				}
 			]
